@@ -1,4 +1,9 @@
 Changelog
 
+"a love supreme"
+- John Coltrane, A Love Supreme (1965)
+
+Changes:
+- Increased data sync rate for cannon drill to avoid laggy motion
 Fixes:
 [Fabric 1.20.1] - Fixed cannon carriage model not loading properly
